DN: renamed ensure(...) to ensureThat(...) to be symmetrical with rbehave ("ensure" is a reserved word in Ruby)